--- a/css/components.css
+++ b/css/components.css
@@ -111,8 +111,8 @@
   z-index: 10;
 }
 .loader {
-  border: 4px solid #f3f3f3;
-  border-top: 4px solid #15bd9e;
+  border: 4px solid #b2b2b2;
+  border-top: 4px solid #d9d9d9;
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -167,7 +167,7 @@
   font-size: 13px;
   border: 1px solid #ccc;
   border-radius: 6px;
-  margin-bottom: 0;
+  margin : 0px 0px 0px 2px;
   background-color: #fff;
 }
 
@@ -350,4 +350,14 @@
 }
 .toggle-switch input:checked + .slider:before {
   transform: translateX(20px);
+}
+
+.dark-mode .text-rise {
+  color: #d32f2f !important;
+}
+.dark-mode .text-fall {
+  color: #1976d2 !important;
+}
+.dark-mode .text-even {
+  color: #ffffff !important;
 }
